Final z-index bug squash

--- a/themes/trc/sass/_page-templates.scss
+++ b/themes/trc/sass/_page-templates.scss
@@ -498,7 +498,7 @@
       width: 100%;
       position: fixed;
       margin-top: 100px; 
-      z-index: 10000;   
+        
     }
 
     ul {
@@ -887,7 +887,6 @@
     width: 100%;
     position: fixed;
     margin-top: 100px;
-    z-index: 10000;
   }
 }
 
@@ -1253,7 +1252,6 @@
     position: fixed;
     width: 100%;
     margin-top: 100px;
-    z-index: 10000;
   }
 }
 
@@ -1306,7 +1304,6 @@
     width: 100%;
     position: fixed;
     margin-top: 100px;
-    z-index: 10000;
   }
 }
 
